[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HYBparsimony"
version = "0.0.10"
authors = [
  { name="Jose Divasón", email="jose.divason@unirioja.es" },
]
#dependencies = ["pandas>=2.0", "scikit-learn>=1.3"]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jodivaso/hyb-parsimony"